--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: [harshitkumar9030]
 ko_fi: harshitkumar
-custom: ["http://paypal.me/harshitkumar9030"]
+custom: ["https://paypal.me/harshitkumar9030"]
